style(action): replace deprecated newInstance
Agent-Logs-Url: https://github.com/tlcsdm/eclipse-ucdetector/sessions/30fa18a4-c626-4339-8a47-9b4d7f8a467d

Co-authored-by: unknowIfGuestInDream <57802425+unknowIfGuestInDream@users.noreply.github.com>